fixed alignment
alignment fixed

--- a/public/user/stylesheets/styles.css
+++ b/public/user/stylesheets/styles.css
@@ -396,7 +396,7 @@ md-card md-content {
     -o-transition: height 1s;
     transition: height 1s; }
   .shortcut-container .fixed-height {
-    height: 120px;
+   
     -webkit-transition: height 1s;
     -moz-transition: height 1s;
     -ms-transition: height 1s;
@@ -468,7 +468,7 @@ md-card md-content {
       overflow: auto; }
   .mini-post .post-details {
     padding: 5px 10px;
-    height: 40%; }
+    height: 40%;width: 100% }
     .mini-post .post-details .post-title {
       margin: 5px 0px 5px 0px;
       font-size: 14px; }
@@ -545,14 +545,25 @@ mentio-menu {
     .post-view-section .linked-post-container .nav-btn:hover {
       background-color: #4C4848; }
   .post-view-section .side-details {
-    overflow: hidden;
-    height: 80%;
-    margin-top: -7px; }
-    .post-view-section .side-details .container {
-      position: absolute;
+    overflow: auto;
+    height: 30%;
+    width: 40%
+    
+    border:2px solid #555555;
+      text-align: center 
+      border-collapse: collapse;
       max-width: 200px;
-      border: 2px solid #D9D9D9;
+      
+    margin-top: 0px; 
+    right: 0px
+  }
+    .post-view-section .side-details .container {
+      position: fixed;
+
       overflow: auto;
+      float: right;
+       right: 0px;
+      top: 0px;
       height: inherit; }
     .post-view-section .side-details .author-profile-picture {
       margin: 5px;
